# bpsr-fishing

./: .gitignore  GUIDE.md  README.md  app_path.py  build.py  builder.yaml  detect_best_fish_score.py  detect_fish.py  installer.nsi  key_mapper.json  latest.json  libraries.py  log_main.py  main.py  pyproject.toml  reader.py  requirements.txt  rotate.py
config/: fish_config.json  settings.json
html/: main.html  overlay.html
images/1920x1080/fish/: billboard_1.aseprite  glass_bottle.aseprite
modules/: area.py  module_calculator.py  module_scanner.py
src/fish/: base.py  fish_config.json  fish_service.py
src/screen_reader/: base.py  image_service.py  screen_service.py
src/ui/: overview_api.py  stats_api.py  ui_service.py
src/utils/: keybinds.py  path.py  updater.py
src/utils/refactor/: spelling.py
tests/: image_score_test.py  results.json
